# Argus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  sentinel.toml.example  sentinel_alerts_backup.jsonl
.claude/: HANDOFF.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
PRD/: 01_PRD.md  02_DATA_MODEL.md  03_PHASES.md  04_PROJECT_SPEC.md  README.md
dashboard/: tailwind.config.ts
dashboard/src/__tests__/: sentinel-redesign.test.tsx
dashboard/src/components/sentinel/: AlertCard.tsx  AlertDetail.tsx  AlertFeed.tsx  AlertHistoryTable.tsx  AlertPriorityBadge.tsx  DetectedPatterns.tsx  EmptyState.tsx  (+4 more)
dashboard/src/layouts/: SentinelLayout.astro
dashboard/src/pages/: sentinel.astro
docs/: ROADMAP.md  ai-agent-design.md  ai-agent-poc-report.md  analysis-balancer-v2-exploit.md  analysis-bybit-1.4b-exploit.md  argus-architecture.html  awesome-ethereum-security-pr.md  competitive-analysis.md  deployment.md  detection-report.md  holesky-deployment.md  mainnet-report-march-2026.md
docs/assets/: demo.tape  reentrancy-demo.tape  sentinel-demo.tape
docs/examples/: access-control-bypass-autopsy.md  balancer-autopsy.md  balancer-trace.json  reentrancy-autopsy.md
examples/: reentrancy_demo.rs  sentinel_dashboard_demo.rs  sentinel_latency_bench.rs  sentinel_realtime_demo.rs  sentinel_rpc_demo.rs
fixtures/prior_tx_replay/: block_24605950_txs.json
scripts/: ecs-deploy.sh  record-demo.sh
src/: engine.rs  lib.rs  opcodes.rs  recorder.rs  types.rs
src/autopsy/: classifier.rs  fund_flow.rs  labels.rs  mod.rs  report.rs  rpc_client.rs  rpc_types.rs  types.rs
src/cli/: formatter.rs  mod.rs  tests.rs
src/sentinel/: alert.rs  analyzer.rs  auto_pause.rs  config.rs  history.rs  http_metrics.rs  mempool_filter.rs  metrics.rs  ml_model.rs  mod.rs  pipeline.rs  pre_filter.rs  replay.rs  rpc_ai.rs  rpc_poller.rs  rpc_replay.rs  rpc_service.rs  rpc_types.rs  service.rs  tests.rs  types.rs  whitelist.rs  whitelist_config.rs  ws_broadcaster.rs
src/sentinel/ai/: ai_config.rs  circuit_breaker.rs  client_http_test.rs  context.rs  context_test.rs  cost.rs  cost_test.rs  fixtures.rs  guard.rs  guard_test.rs  judge.rs  judge_test.rs  mod.rs  poc_test.rs  prompts.rs  rate_limit.rs  t5_calldata_test.rs  t5_cost_test.rs  t5_helpers.rs  t5_integration_test.rs  t5_metrics_test.rs  t5_pipeline_test.rs  types.rs
src/sentinel/pipeline/: context.rs  features.rs  mod.rs  orchestrator.rs  steps.rs  tests.rs
src/sentinel/tests/: alert_tests.rs  mod.rs  pipeline_tests.rs  prefilter_benchmark.rs  prefilter_scoring_tests.rs  prefilter_tests.rs  rpc_service_tests.rs  service_tests.rs  whitelist_tests.rs
src/tests/: autopsy_cli.rs  autopsy_tests.rs  classifier_diagnostic.rs  classifier_helpers.rs  classifier_validation_tests.rs  cli_tests.rs  error_handling.rs  exploit_fixtures.rs  exploit_smoke_tests.rs  helpers.rs  live_replay_diagnostic.rs  mainnet_validation.rs  mod.rs  prior_tx_tests.rs  receipt_fallback_tests.rs  recorder_edge_cases.rs  replay_benchmark.rs  serde_tests.rs  stress_tests.rs
tests/fixtures/ai/: attack_flash_loan_euler.json  attack_price_manipulation_balancer.json  attack_reentrancy_dao.json  normal_contract_deploy_factory.json  normal_contract_deploy_simple.json  normal_defi_liquidity_add.json  normal_defi_swap_multi_hop.json  normal_defi_swap_uniswap.json  normal_eth_transfer_contract.json  normal_eth_transfer_large.json  normal_eth_transfer_simple.json  normal_multi_call_batch.json  normal_multi_call_governance.json
(+11 files in other folders)
